--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".WelcomePage">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginBottom="436dp"
+        android:text="Welcome\n you are logged in "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
