--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -7,18 +7,42 @@
     tools:context=".WelcomePage">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcomeTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginLeft="163dp"
-        android:layout_marginTop="113dp"
-        android:layout_marginEnd="163dp"
-        android:layout_marginRight="163dp"
         android:layout_marginBottom="436dp"
-        android:text="Welcome\n you are logged in "
+        android:layout_marginEnd="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="113dp"
+        android:text="Welcome"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/userField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="username goes here"
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="162dp" />
+
+    <TextView
+        android:id="@+id/typeField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Type goes here"
+        tools:layout_editor_absoluteX="145dp"
+        tools:layout_editor_absoluteY="209dp" />
+
+    <Spinner
+        android:id="@+id/accountList"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="383dp" />
 </android.support.constraint.ConstraintLayout>
