--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="85dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="157dp" />
 
     <EditText
@@ -21,75 +23,90 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="85dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="315dp" />
 
     <TextView
         android:id="@+id/lblUser"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:text="USERNAME"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="141dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="137dp" />
 
     <TextView
         android:id="@+id/lblPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PASSWORD"
-        tools:layout_editor_absoluteX="154dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="296dp" />
 
     <TextView
         android:id="@+id/lblUserError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="191dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="206dp" />
 
     <TextView
         android:id="@+id/lblPassError"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="192dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="361dp" />
-
-    <RadioGroup
-        android:id="@+id/rbAccountType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="190dp"
-        tools:layout_editor_absoluteY="522dp" />
-
-    <RadioButton
-        android:id="@+id/rbUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User"
-        tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="410dp" />
-
-    <RadioButton
-        android:id="@+id/rbProvider"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Provider"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="410dp" />
-
-    <RadioButton
-        android:id="@+id/rbAdmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Admin"
-        tools:layout_editor_absoluteX="243dp"
-        tools:layout_editor_absoluteY="410dp" />
 
     <Button
         android:id="@+id/btnLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="log-in"
-        tools:layout_editor_absoluteX="148dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="475dp" />
+
+    <RadioGroup
+        android:layout_width="263dp"
+        android:layout_height="31dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="412dp">
+
+        <RadioButton
+            android:id="@+id/rbProvider"
+            android:layout_width="98dp"
+            android:layout_height="wrap_content"
+            android:text="Provider"
+            tools:layout_editor_absoluteX="143dp"
+            tools:layout_editor_absoluteY="410dp" />
+
+        <RadioButton
+            android:id="@+id/rbAdmin"
+            android:layout_width="87dp"
+            android:layout_height="wrap_content"
+            android:text="Admin"
+            tools:layout_editor_absoluteX="243dp"
+            tools:layout_editor_absoluteY="410dp" />
+
+        <RadioButton
+            android:id="@+id/rbUser"
+            android:layout_width="78dp"
+            android:layout_height="wrap_content"
+            android:text="User"
+            tools:layout_editor_absoluteX="63dp"
+            tools:layout_editor_absoluteY="410dp" />
+    </RadioGroup>
 </android.support.constraint.ConstraintLayout>
