--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -26,23 +26,34 @@
     <TextView
         android:id="@+id/userField"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="17dp"
+        android:layout_marginLeft="129dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="29dp"
         android:text="username goes here"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="162dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeTest" />
 
     <TextView
         android:id="@+id/typeField"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginLeft="145dp"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="29dp"
         android:text="Type goes here"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="209dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userField" />
 
     <Spinner
         android:id="@+id/accountList"
         android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="383dp" />
+        android:layout_height="22dp"
+        android:layout_marginBottom="160dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="157dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/typeField" />
 </android.support.constraint.ConstraintLayout>
