--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -10,34 +10,39 @@
         android:id="@+id/txtUser"
         android:layout_width="229dp"
         android:layout_height="71dp"
+        android:layout_marginLeft="79dp"
+        android:layout_marginStart="79dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblUser" />
-
-    <EditText
-        android:id="@+id/txtPass"
-        android:layout_width="227dp"
-        android:layout_height="61dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblPass" />
 
     <TextView
         android:id="@+id/lblUser"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginLeft="156dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="72dp"
         android:text="USERNAME"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txtPass"
+        android:layout_width="228dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="33dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="76dp"
+        android:layout_marginStart="80dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblPass" />
 
     <TextView
         android:id="@+id/lblPass"
@@ -47,6 +52,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="35dp"
         android:text="PASSWORD"
+        app:layout_constraintBottom_toTopOf="@+id/txtPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +76,7 @@
         android:layout_marginLeft="48dp"
         android:layout_marginRight="51dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="23dp"
         android:text="Select your registered account type:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
