--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -10,37 +10,44 @@
         android:id="@+id/welcomeTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="436dp"
+        android:layout_marginBottom="424dp"
         android:layout_marginEnd="163dp"
         android:layout_marginLeft="163dp"
         android:layout_marginRight="163dp"
         android:layout_marginStart="163dp"
-        android:layout_marginTop="113dp"
         android:text="Welcome"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/userField"
         android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:layout_marginLeft="129dp"
-        android:layout_marginStart="129dp"
-        android:layout_marginTop="29dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="252dp"
         android:text="username goes here"
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/welcomeTest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeTest" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/typeField"
         android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginLeft="145dp"
-        android:layout_marginStart="145dp"
-        android:layout_marginTop="29dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="20dp"
         android:text="Type goes here"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userField" />
