--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -56,11 +56,59 @@
         android:id="@+id/accountList"
         android:layout_width="368dp"
         android:layout_height="22dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="261dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="157dp"
+        android:layout_marginTop="46dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeField" />
+
+    <Button
+        android:id="@+id/addServiceButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="95dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="118dp"
+        android:text="add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deleteServiceButt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/accountList" />
+
+    <Button
+        android:id="@+id/deleteServiceButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="95dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="118dp"
+        android:text="delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addServiceButt"
+        app:layout_constraintTop_toBottomOf="@+id/accountList" />
+
+    <Button
+        android:id="@+id/editServiceButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="95dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="118dp"
+        android:text="edit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/deleteServiceButt"
+        app:layout_constraintTop_toBottomOf="@+id/accountList" />
 </android.support.constraint.ConstraintLayout>
