--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/accountList" />
 
     <Button
-        android:id="@+id/deletingServiceButt"
+        android:id="@+id/deleteServiceButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="95dp"
