--- a/app/src/main/res/layout/activity_deleting_service_page.xml
+++ b/app/src/main/res/layout/activity_deleting_service_page.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/servicesList"
+        android:id="@+id/servicesSpinner"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
