--- a/app/src/main/res/layout/activity_edit_service_page.xml
+++ b/app/src/main/res/layout/activity_edit_service_page.xml
@@ -10,19 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".AddServicePage"
-        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/EditServiceTitle"
             android:layout_width="201dp"
             android:layout_height="49dp"
-            android:layout_marginStart="105dp"
-            android:layout_marginLeft="105dp"
-            android:layout_marginTop="47dp"
-            android:layout_marginEnd="78dp"
-            android:layout_marginRight="78dp"
             android:layout_marginBottom="32dp"
+            android:layout_marginEnd="78dp"
+            android:layout_marginLeft="105dp"
+            android:layout_marginRight="78dp"
+            android:layout_marginStart="105dp"
+            android:layout_marginTop="47dp"
             android:text="Editng Services"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,12 +37,12 @@
             android:id="@+id/editServiceNameText"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginStart="84dp"
-            android:layout_marginLeft="84dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="85dp"
-            android:layout_marginRight="85dp"
             android:layout_marginBottom="38dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginLeft="84dp"
+            android:layout_marginRight="85dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginTop="60dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Service Name"
@@ -57,16 +57,14 @@
             android:id="@+id/editServiceWageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginLeft="84dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="85dp"
-            android:layout_marginRight="85dp"
-            android:layout_marginBottom="54dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginTop="50dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Serivce Rate"
-            app:layout_constraintBottom_toTopOf="@+id/editServiceButt"
+            app:layout_constraintBottom_toTopOf="@+id/errorMessageEdit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,29 +74,27 @@
             android:id="@+id/editServiceButt"
             android:layout_width="182dp"
             android:layout_height="56dp"
-            android:layout_marginStart="101dp"
-            android:layout_marginLeft="101dp"
-            android:layout_marginTop="54dp"
-            android:layout_marginEnd="101dp"
-            android:layout_marginRight="101dp"
             android:layout_marginBottom="73dp"
+            android:layout_marginEnd="101dp"
+            android:layout_marginStart="101dp"
+            android:layout_marginTop="15dp"
             android:text="Edit Service"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editServiceWageText" />
+            app:layout_constraintTop_toBottomOf="@+id/errorMessageEdit" />
 
         <Spinner
             android:id="@+id/spinner2"
             android:layout_width="368dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginBottom="12dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="44dp"
             app:layout_constraintBottom_toTopOf="@+id/editServiceNameText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,5 +113,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="20dp" />
+
+        <TextView
+            android:id="@+id/errorMessageEdit"
+            android:layout_width="76dp"
+            android:layout_height="26dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="17dp"
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintBottom_toTopOf="@+id/editServiceButt"
+            app:layout_constraintStart_toEndOf="@+id/guideline4"
+            app:layout_constraintTop_toBottomOf="@+id/editServiceWageText" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
