--- a/app/src/main/res/layout/activity_deleting_service_page.xml
+++ b/app/src/main/res/layout/activity_deleting_service_page.xml
@@ -26,7 +26,7 @@
     <Spinner
         android:id="@+id/servicesSpinner"
         android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_height="37dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
