--- a/app/src/main/res/layout/activity_edit_service_page.xml
+++ b/app/src/main/res/layout/activity_edit_service_page.xml
@@ -37,20 +37,32 @@
             android:id="@+id/editServiceNameText"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginBottom="38dp"
+            android:layout_marginBottom="17dp"
             android:layout_marginEnd="85dp"
-            android:layout_marginLeft="84dp"
-            android:layout_marginRight="85dp"
             android:layout_marginStart="84dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="108dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Service Name"
+            android:text="Service Name (After)"
             app:layout_constraintBottom_toTopOf="@+id/editServiceWageText"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.997"
             app:layout_constraintStart_toEndOf="@+id/guideline4"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+
+        <EditText
+            android:id="@+id/editBaseName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Service Name (Before)"
+            app:layout_constraintBottom_toTopOf="@+id/editServiceNameText"
+            app:layout_constraintStart_toEndOf="@+id/guideline4"
             app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
         <EditText
@@ -60,13 +72,13 @@
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="85dp"
             android:layout_marginStart="84dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="28dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Serivce Rate"
             app:layout_constraintBottom_toTopOf="@+id/errorMessageEdit"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editServiceNameText" />
 
