--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -10,11 +10,11 @@
         android:id="@+id/welcomeTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="424dp"
-        android:layout_marginEnd="163dp"
-        android:layout_marginLeft="163dp"
-        android:layout_marginRight="163dp"
         android:layout_marginStart="163dp"
+        android:layout_marginLeft="163dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginRight="163dp"
+        android:layout_marginBottom="424dp"
         android:text="Welcome"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,12 +26,12 @@
         android:id="@+id/userField"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="252dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:text="username goes here"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
@@ -45,8 +45,8 @@
         android:id="@+id/typeField"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginLeft="160dp"
         android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="20dp"
         android:text="Type goes here"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,12 +56,12 @@
         android:id="@+id/accountList"
         android:layout_width="368dp"
         android:layout_height="22dp"
-        android:layout_marginBottom="261dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="46dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="261dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,12 +71,12 @@
         android:id="@+id/addServiceButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="95dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="43dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="118dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginBottom="95dp"
         android:text="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deletingServiceButt"
@@ -87,10 +87,10 @@
         android:id="@+id/deleteServiceButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="95dp"
-        android:layout_marginLeft="43dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="118dp"
+        android:layout_marginBottom="95dp"
         android:text="delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addServiceButt"
@@ -100,15 +100,26 @@
         android:id="@+id/editServiceButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="95dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginRight="18dp"
         android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="118dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="95dp"
         android:text="edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/deletingServiceButt"
         app:layout_constraintTop_toBottomOf="@+id/accountList" />
+
+    <Button
+        android:id="@+id/editInfoButt"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:text="Edit Information"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addServiceButt" />
 </android.support.constraint.ConstraintLayout>
